--- a/graph_display.html
+++ b/graph_display.html
@@ -15,5 +15,10 @@
     <h2>3-Month Solar Radio Flux Prediction</h2>
     <iframe src="predicted_daily_flux.html" width="100%" height="600" style="border:none;"></iframe>
 
+
+    <div class="back-link">
+        <a href="https://a111950.github.io/KP/index.html">Go Back to HomePage</a>
+    </div>
+
 </body>
 </html>
