--- a/graph_display.html
+++ b/graph_display.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar Flux Analysis</title>
+    <style>
+        /* Styling for the 'Go Back to HomePage' link */
+        .back-link {
+            margin-top: 20px;
+            font-size: 24px;
+            font-weight: bold;
+            font-family: 'Arial', sans-serif;
+        }
+        .back-link a {
+            color: #4CAF50; /* Soft green color */
+            text-decoration: none;
+            padding: 10px 20px;
+            border: 2px solid #4CAF50;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+        }
+        .back-link a:hover {
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body style="background-color: black; color: white; text-align: center;">
 
@@ -14,7 +36,6 @@
 
     <h2>3-Month Solar Radio Flux Prediction</h2>
     <iframe src="predicted_daily_flux.html" width="100%" height="600" style="border:none;"></iframe>
-
 
     <div class="back-link">
         <a href="https://a111950.github.io/KP/index.html">Go Back to HomePage</a>
