--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title Page</title>
+    <title>Solar Radio Activity and Earth's Weather</title>
     <style>
         body {
             display: flex;
@@ -11,15 +11,15 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            background-color: #333333; /* Dark charcoal color */
         }
         h1 {
             font-size: 72px;
-            color: #333;
+            color: #ffffff; /* White color */
         }
     </style>
 </head>
 <body>
-    <h1>Title</h1>
+    <h1>Solar Radio Activity and Earth's Weather</h1>
 </body>
 </html>
