--- a/graph_display.html
+++ b/graph_display.html
@@ -7,17 +7,21 @@
 </head>
 <body style="background-color: black; color: white; text-align: center;">
 
+    <!-- Small explanation at the top of the page -->
+    <p style="font-size: small; color: gray; padding: 5px;">
+        Daily flux values are the radio emission from the Sun at a wavelength of 10.7 centimetres recorded daily. Values prior to October 28, 2004 are no longer available directly from the website. Please contact us using the Contact Us - Email Form for more information.
+    </p>
+
     <h1 style="color: white;">Solar Radio Flux Analysis</h1>
 
-    <h2>Current Solar Radio Flux Status</h2>
+    <h2>Current Solar Radio Flux Progression</h2>
     <iframe src="observed_daily_flux.html" width="100%" height="600" style="border:none;"></iframe>
 
-    <h2>3-Month Solar Radio Flux Prediction</h2>
+    <h2>3-Month Solar Radio Flux Forecast</h2>
     <iframe src="predicted_daily_flux.html" width="100%" height="600" style="border:none;"></iframe>
 
-
     <div class="back-link">
-        <a href="https://a111950.github.io/KP/index.html">Go Back to HomePage</a>
+        <a href="https://a111950.github.io/KP/index.html" style="color: white;">Go Back to HomePage</a>
     </div>
 
 </body>
