--- a/graph_display.html
+++ b/graph_display.html
@@ -7,8 +7,11 @@
 </head>
 <body style="background-color: black; color: white; text-align: center;">
 
-    <!-- Small explanation at the top of the page -->
-    <p style="font-size: small; color: gray; padding: 5px;">
+    <!-- Solar radio flux image at the top of the page -->
+    <img src="solar radio.jpg" alt="Solar Radio Flux Image" width="100%" style="max-height: 400px; object-fit: cover;">
+
+    <!-- Explanation with customized font and style -->
+    <p style="font-size: small; color: white; font-family: 'Courier New', Courier, monospace; padding: 10px;">
         Daily flux values are the radio emission from the Sun at a wavelength of 10.7 centimetres recorded daily. Values prior to October 28, 2004 are no longer available directly from the website. Please contact us using the Contact Us - Email Form for more information.
     </p>
 
