--- a/sunspot.html
+++ b/sunspot.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +25,11 @@
     <!-- Sunspot Prediction -->
     <h2>12-Month Sunspot Number Prediction</h2>
     <iframe src="predicted_sunspot_forecast.html" width="100%" height="600" style="border:none;"></iframe>
+
+    <!-- Go back to homepage link -->
+    <div style="margin-top: 20px;">
+        <a href="index.html" style="color: white; text-decoration: none; font-size: 16px;">Go back to homepage</a>
+    </div>
 
 </body>
 </html>
