--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #333333; /* Dark charcoal color */
+            background-image: url('space.jpg'); /* Background image */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            color: #ffffff;
         }
         h1 {
             font-size: 72px;
-            color: #ffffff; /* White color */
+            color: #ffffff;
             margin-bottom: 40px;
         }
         .button-container {
@@ -27,7 +31,7 @@
             padding: 15px 30px;
             font-size: 20px;
             color: #ffffff;
-            background-color: #555555;
+            background-color: rgba(85, 85, 85, 0.8); /* Semi-transparent background */
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -35,7 +39,7 @@
             transition: background-color 0.3s ease;
         }
         .button:hover {
-            background-color: #777777;
+            background-color: rgba(119, 119, 119, 0.8);
         }
     </style>
 </head>
