--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-image: url('space.jpg'); /* Background image */
+            background-image: url('space,jpg.jpg'); /* Background image */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
