--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div class="button-container">
         <a href="solar_radio.html" class="button">See Solar Radio Activity</a>
         <a href="sunspot.html" class="button">See Sunspot Progression</a>
+        <a href="game.html" class="button">Play Game</a>
     </div>
 
 </body>
