--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-image: url('space,jpg.jpg'); /* Background image */
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+            background-color: #333333; /* Dark charcoal background */
             color: #ffffff;
         }
         h1 {
@@ -51,6 +48,7 @@
         <a href="solar_radio.html" class="button">See Solar Radio Activity</a>
         <a href="sunspot.html" class="button">See Sunspot Progression</a>
         <a href="space_game.html" class="button">Play Game</a>
+        <a href="mars_weather.html" class="button">See Mars Weather</a>
     </div>
 
 </body>
