--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #333333; /* Dark charcoal background */
+            background-image: url('space,jpg.jpg'); /* Background image */
             color: #ffffff;
         }
         h1 {
