--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="solar_radio.html" class="button">See Solar Radio Activity</a>
         <a href="sunspot.html" class="button">See Sunspot Progression</a>
         <a href="space_game.html" class="button">Play Game</a>
-        <a href="mars_weather.html" class="button">See Mars Weather</a>
+        <a href="Mars_Weather.html" class="button">See Mars Weather</a>
     </div>
 
 </body>
